more testing, kinda close but think theres like 1 more thing

--- a/the program that parallels.ipynb
+++ b/the program that parallels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,10 @@
     "import time\n",
     "import asyncio\n",
     "import aiohttp\n",
-    "import multiprocessing"
+    "import multiprocessing\n",
+    "import concurrent\n",
+    "from concurrent.futures import ThreadPoolExecutor, ProcessPoolExecutor\n",
+    "import math"
    ]
   },
   {
@@ -21,6 +24,13 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Async vs Sequential"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -29,8 +39,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9386866092681885\n",
-      "37.71987056732178\n"
+      "t\n",
+      "0.7505519390106201\n"
      ]
     }
    ],
@@ -47,31 +57,34 @@
     "\n",
     "async def main(urls):\n",
     "    async with aiohttp.ClientSession() as session:\n",
+    "        #print('t')\n",
     "        ret = await asyncio.gather(*(get(url, session) for url in urls))\n",
     "    \n",
     "    #print(\"Finalized all. Return is a list of len {} outputs.\".format(len(ret)))\n",
-    "\n",
+    "def seq_main(urls):\n",
+    "    with requests.Session() as session:\n",
+    "        return [session.get(url) for url in urls]\n",
+    "    \n",
+    "    \n",
     "test_websites = ['https://google.com'] * 100\n",
     "start = time.time()\n",
     "await main(test_websites)\n",
     "end = time.time()\n",
     "print(end - start)\n",
     "\n",
-    "start = time.time()\n",
-    "for w in test_websites:\n",
-    "    requests.get(w)\n",
-    "end = time.time()\n",
-    "print(end - start)"
+    "# About 30 seconds on my machine - Alvin\n",
+    "# start = time.time()\n",
+    "# seq_main(test_websites)\n",
+    "# end = time.time()\n",
+    "# print(end - start)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import concurrent\n",
-    "from concurrent.futures import ThreadPoolExecutor, ProcessPoolExecutor"
+    "## Different implementations of Multiprocessing\n",
+    "You can see that we get I/O Blocked"
    ]
   },
   {
@@ -133,6 +146,84 @@
     "            #print('%r page is %d bytes' % (url, len(data.content)))\n",
     "end = time.time()\n",
     "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine Multiprocessing and Asynio: Asyncio across multiple processes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if u dont impriot it u get an error\n",
+    "# https://stackoverflow.com/questions/62488423/brokenprocesspool-while-running-code-in-jupyter-notebook\n",
+    "# https://stackoverflow.com/questions/78352063/python-concurrent-futures-processpoolexecutor-causes-brokenprocesspool-error-whe\n",
+    "from broke import async_process_main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "0.7827343940734863\n",
+      "7 <Response [200]>\n",
+      "2.8510491847991943\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_websites = ['https://google.com'] * 100\n",
+    "start = time.time()\n",
+    "await main(test_websites)\n",
+    "end = time.time()\n",
+    "print(end - start)\n",
+    "\n",
+    "async def main(urls):\n",
+    "    print('t')\n",
+    "    async with aiohttp.ClientSession() as session:\n",
+    "        \n",
+    "        ret = await asyncio.gather(*(get(url, session) for url in urls))\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "n_threads = 16\n",
+    "    # Each process must run a asyncio function?\n",
+    "await async_process_main(test_websites, n_threads)\n",
+    "\n",
+    "\n",
+    "end = time.time()\n",
+    "print(end - start)\n"
    ]
   }
  ],
