--- a/the program that parallels.ipynb
+++ b/the program that parallels.ipynb
@@ -225,11 +225,81 @@
     "end = time.time()\n",
     "print(end - start)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use multiple threads to send the custom packets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending 500 custom TCP packets to 192.168.1.203:80 using 16 threads...\n",
+      "Sent 500 packets in 3.0 seconds\n",
+      "Sending 500 custom TCP packets to 192.168.1.203:80 using 1 threads...\n",
+      "Sent 500 packets in 30.74 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from scapy.all import IP, TCP, send\n",
+    "from random import randint\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "\n",
+    "\n",
+    "def rand_int():\n",
+    "    \"\"\"Generate a random integer for port or sequence.\"\"\"\n",
+    "    return randint(1000, 9000)\n",
+    "\n",
+    "\n",
+    "def send_single_packet(src_ip, dst_ip, dst_port):\n",
+    "    \"\"\"Send a single custom TCP packet using Scapy.\"\"\"\n",
+    "    ip_packet = IP(src=src_ip, dst=dst_ip)\n",
+    "    tcp_packet = TCP(\n",
+    "        sport=rand_int(), dport=dst_port, flags=\"S\", seq=rand_int(), window=rand_int()\n",
+    "    )\n",
+    "    send(ip_packet / tcp_packet, verbose=0)\n",
+    "\n",
+    "\n",
+    "def send_custom_tcp_packets_parallel(src_ip, dst_ip, dst_port, count, n_threads):\n",
+    "    \"\"\"Send custom TCP packets in parallel using threads.\"\"\"\n",
+    "    print(f\"Sending {count} custom TCP packets to {dst_ip}:{dst_port} using {n_threads} threads...\")\n",
+    "    start = time.time()\n",
+    "    \n",
+    "    with ThreadPoolExecutor(max_workers=n_threads) as executor:\n",
+    "        futures = [executor.submit(send_single_packet, src_ip, dst_ip, dst_port) for _ in range(count)]\n",
+    "        # Wait for all futures to complete\n",
+    "        for future in futures:\n",
+    "            future.result()  # This prints any exceptions that show up\n",
+    "\n",
+    "    print(f\"Sent {count} packets in {round(time.time() - start, 2)} seconds\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Custom TCP packet sending\n",
+    "    source_ip = \"192.168.1.42\"\n",
+    "    target_ip = \"192.168.1.203\"\n",
+    "    target_port = 80\n",
+    "    packet_count = 500\n",
+    "    n_threads = 16\n",
+    "\n",
+    "    send_custom_tcp_packets_parallel(source_ip, target_ip, target_port, packet_count, n_threads)\n",
+    "    send_custom_tcp_packets_parallel(source_ip, target_ip, target_port, packet_count, 1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
